force-app/main/default/objects/Calendar_Connection__c/Calendar_Connection__c.object-meta.xml
<CustomObject>
    <description>Tracks a users external calendar integration connection</description>
    <label>Calendar Connection</label>
    <nameField>
        <label>Connection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Calendar Connections</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>