force-app/main/default/objects/Calendar_Connection__c/fields/Calendar_Id__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Id__c</fullName>
    <description>External calendar identifier (e.g. primary for Google, calendar ID for Outlook)</description>
    <label>Calendar ID</label>
    <length>500</length>
    <type>Text</type>
</CustomField>