force-app/main/default/objects/Calendar_Connection__c/fields/Check_For_Conflicts__c.field-meta.xml
<CustomField>
    <fullName>Check_For_Conflicts__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether to check this calendar for busy time conflicts when calculating availability</description>
    <label>Check For Conflicts</label>
    <type>Checkbox</type>
</CustomField>