force-app/main/default/objects/Calendar_Connection__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this connection is actively syncing</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>