force-app/main/default/objects/Calendar_Connection__c/fields/Last_Sync__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync__c</fullName>
    <description>Timestamp of last successful sync with external calendar</description>
    <label>Last Sync</label>
    <type>DateTime</type>
</CustomField>