force-app/main/default/objects/Calendar_Connection__c/fields/Owner_User__c.field-meta.xml
<CustomField>
    <fullName>Owner_User__c</fullName>
    <description>The user who owns this calendar connection</description>
    <label>Owner User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Calendar Connections</relationshipLabel>
    <relationshipName>Calendar_Connections</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>