force-app/main/default/objects/Calendar_Connection__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <description>Calendar provider type</description>
    <label>Provider</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Google</fullName>
                <label>Google Calendar</label>
            </value>
            <value>
                <fullName>Microsoft</fullName>
                <label>Microsoft Outlook</label>
            </value>
            <value>
                <fullName>Salesforce</fullName>
                <label>Salesforce Events</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>