force-app/main/default/objects/Calendar_Connection__c/fields/Push_Events_To__c.field-meta.xml
<CustomField>
    <fullName>Push_Events_To__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether to create calendar events in this external calendar when a booking is confirmed</description>
    <label>Push Events To</label>
    <type>Checkbox</type>
</CustomField>